tests/rosetta/out/Zig/arena-storage-pool.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenarena-storage-pool3177546597/001/prog.zig:56:14: error: unused function parameter
